# fpl-wrapper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  python-workflow.yml
.github/ISSUE_TEMPLATE/: 6-security-report.md  config.yml
src/fpl/: entry_points.py  managers.py  models.py  players.py  shared.py
src/fpl/analysis/: analysis.py
src/fpl/data_fetch/: fixtures.py  managers.py  players.py
src/fpl/input_parsing/: parse_formation.py
src/fpl/model/: data_analysis.py  managers_models.py  players_models.py
src/fpl_wrapper/: __about__.py  entry_points.py
src/fpl_wrapper/data_fetch/: bootstrap_data.py  dream_team.py  exception.py  fixtures.py  managers.py  players.py  teams.py
src/fpl_wrapper/model/: bootstrap_models.py  club_models.py  dream_team.py  fixture_models.py  manager_basic.py  managers_models.py  players_models.py
tests/: __init__.py  conftest.py  greeting_test.py  managers_test.py  models_test.py  players_test.py  shared_test.py
tests/analysis_test/: analysis_test.py
tests/data_fetch_test/: data_analysis_models_test.py  fixtures_test.py  managers_test.py  players_test.py
tests/data_fetch_test.py/: managers_test.py  players_test.py
tests/fpl_wrapper/data_fetch_test/: bootstrap_test.py  dream_team_test.py  fixtures_test.py  managers_test.py  players_test.py
tests/fpl_wrapper/models_test/: fixtures_model_test.py  formation_model_test.py  managers_model_test.py  players_model_test.py
tests/input_parsing_test/: input_parsing_test.py
tests/models/: managers_model_test.py  players_model_test.py
tests/models_test/: fixtures_model_test.py  managers_model_test.py  players_model_test.py
